<resources>
    <string name="app_name">5tly</string>
    <string name="main_logo">Main Logo</string>
    <string name="facebook_app_id">fb{{ facebook_app_id }}</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="f_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="referal_code">Referal Code</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="terms_and_conditions"><u>terms of services</u>.</string>
    <string name="this_is_going_to_be_terms_and_condtions_page">This is going to be terms and condtions page sdakjdkaskdlj  kjsdlkajdkljsklajd jsajjdklsajdjaskjdk kasjdjsadkjsdjakdjsajdklajdkjasdj  jdklsajdkja kjdk sklajdjasdja jjdj kljsakldjaskldj kkj jdklsajdkljasdkj kdkl jksjda jjsaj kljsaldj
     djskajdklsjaj ladsj jlkajklj  kjdklajdlksjaj dkljadkjkl ajjdl kjaklsd jklaj klj klajdkjakjd jqiruqiojzdflkj </string>
</resources>
